# openamundsen_da

./: .dockerignore  .env  .env.example  .gitignore  CODE_REVIEW_GUIDELINES.md  Dockerfile  RAM_storage_overview.md  README.md  bottom_readme_copy.txt  code_review.md  compose.yml  environment.yml  openamundsen_da_structure.html  pyproject.toml  runner_full.tmp  temp_head.txt  temp_mod_head.txt  top_readme_copy.txt
docker/: oa-da-demo.sh
docs/: Gemfile  README.md  _config.yml  da_overview.md  index.md  installation.md  project-structure.md  usage_powershell.md  workflow.md
docs/advanced/: index.md  performance.md  troubleshooting.md
docs/guides/: cli.md  configuration.md  experiments.md  index.md  observations.md
docs/reference/: api.md  da-methods.md  index.md  package-structure.md
openamundsen_da/: README.md  coding_guidline.md
openamundsen_da.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
openamundsen_da.egg-info/openamundsen_da/core/: config.py  constants.py  env.py  launch.py
openamundsen_da.egg-info/openamundsen_da/observer/: satellite_scf.py
openamundsen_da/core/: config.py  constants.py  env.py  launch.py  prior_forcing.py  runner.py  stats.py
openamundsen_da/io/: paths.py
openamundsen_da/methods/: daily_aoi_series.py
openamundsen_da/methods/h_of_x/: __init__.py  model_scf.py
openamundsen_da/methods/pf/: __init__.py  assimilate_scf.py  plot_ess_timeline.py  plot_weights.py  rejuvenate.py  resample.py
openamundsen_da/methods/viz/: __init__.py  _style.py  (+6 more)
openamundsen_da/observer/: fraction_obs.py  mod10a1_preprocess.py  plot_fractions.py  plot_scf_summary.py  satellite_scf.py  satellite_wet_snow_s1.py  snowflake_fsc.py
openamundsen_da/pipeline/: season.py  season_skeleton.py
openamundsen_da/util/: __init__.py  aoi.py  da_events.py  glacier_mask.py  perf_monitor.py  roi.py  stats.py  ts.py
templates/project/: project.yml
(+18 files in other folders)
