[project]
name = "openamundsen-da"
version = "0.0.1"
description = "Data assimilation extension for openAMUNDSEN"
requires-python = ">=3.10"
dependencies = ["openamundsen>=1.1"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
oa-da-scf = "openamundsen_da.observer.satellite_scf:cli_main"
oa-da-mod10a1 = "openamundsen_da.observer.mod10a1_preprocess:cli_main"
oa-da-plot-scf = "openamundsen_da.observer.plot_scf_summary:cli_main"
oa-da-model-scf = "openamundsen_da.methods.h_of_x.model_scf:cli_main"
oa-da-assimilate-scf = "openamundsen_da.methods.pf.assimilate_scf:cli_main"
oa-da-plot-weights = "openamundsen_da.methods.pf.plot_weights:cli_main"
oa-da-plot-ess = "openamundsen_da.methods.pf.plot_ess_timeline:cli_main"
oa-da-resample = "openamundsen_da.methods.pf.resample:cli_main"
